--- a/components/intersection/index.css
+++ b/components/intersection/index.css
@@ -3,7 +3,7 @@
 @import "../base";
 
 .Intersection {
-  max-width: 18em;
+  max-width: 17em;
   margin-bottom: 2rem;
   font-size: 2.5rem;
   line-height: 1.15;
