--- a/components/mission/index.css
+++ b/components/mission/index.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  min-height: 90vh;
+  min-height: 100vh;
   margin-bottom: 5rem;
   position: relative;
   overflow: hidden;
@@ -29,24 +29,13 @@
 .Mission::before {
   content: "";
   display: block;
-  height: 25vh;
-  max-height: calc(var(--Header-height) + 10vh); /* 1 */
+  height: var(--Header-height); /* 1 */
 }
 
 .Mission::after {
   content: "";
   display: block;
   height: 20vh; /* 2 */
-}
-
-@media (min-height: 600px) and (min-width: 600px) {
-  .Mission::before {
-    height: 10vh;
-  }
-
-  .Mission::after {
-    height: 15vh;
-  }
 }
 
 @media (min-width: 1000px) {
@@ -65,18 +54,7 @@
 
 .Mission-body {
   flex: 1 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  height: 100%;
-  max-width: 32rem;
-}
-
-@media (min-height: 600px) {
-  .Mission-body {
-    max-width: 45rem;
-  }
+  --current-color: 255, 255, 255;
 }
 
 .Mission-title {
@@ -84,6 +62,10 @@
 }
 
 @media (min-width: 600px) {
+  .Mission {
+    min-height: 90vh;
+  }
+
   .Mission-title {
     font-size: 4.5rem;
   }
